# pictogram

./: Cargo.toml  README.md
picto/: Cargo.toml
picto-icons-material/: .gitignore  Cargo.toml  README.md
picto-icons-material/src/: index.rs  lib.rs
picto-macro/: Cargo.toml  README.md
picto-macro/src/: svg_icon_reader.rs
picto/src/: lib.rs
picto/tests/: sample.rs
pictogram/: Cargo.toml
pictogram-dioxus/: Cargo.toml  README.md
pictogram-dioxus/src/: icon.rs  lib.rs  provider.rs
pictogram-icons/: Cargo.toml  README.md
pictogram-icons-bootstrap/: Cargo.toml  README.md
pictogram-icons-bootstrap/icons/: 0_circle-filled.json  0_circle-outlined.json  0_square-filled.json  0_square-outlined.json  123-outlined.json  1_circle-filled.json  1_circle-outlined.json  1_square-filled.json  1_square-outlined.json  2_circle-filled.json  2_circle-outlined.json  2_square-filled.json  2_square-outlined.json  3_circle-filled.json  3_circle-outlined.json  3_square-filled.json  3_square-outlined.json  4_circle-filled.json  4_circle-outlined.json  4_square-filled.json  4_square-outlined.json  5_circle-filled.json  5_circle-outlined.json  5_square-filled.json  5_square-outlined.json  6_circle-filled.json  6_circle-outlined.json  6_square-filled.json  6_square-outlined.json  7_circle-filled.json  7_circle-outlined.json  7_square-filled.json  7_square-outlined.json  8_circle-filled.json  8_circle-outlined.json  8_square-filled.json  8_square-outlined.json  9_circle-filled.json  9_circle-outlined.json  9_square-filled.json  (+2036 more)
pictogram-icons-bootstrap/src/: index.rs
pictogram-icons-feather/: Cargo.toml  README.md
pictogram-icons-feather/src/: index.rs  lib.rs
pictogram-icons-font-awesome/: Cargo.toml  README.md
pictogram-icons-hero/: Cargo.toml  README.md
pictogram-icons-ion/: Cargo.toml  README.md
pictogram-icons-ion/src/: lib.rs
pictogram-icons-lucide/: Cargo.toml  README.md
pictogram-icons-material/: .gitignore  Cargo.toml  README.md
pictogram-icons-material/icons/: action_123-rounded.json  action_123-sharp.json  action_123-two_tone.json  action_3d_rotation-filled.json  action_3d_rotation-rounded.json  action_3d_rotation-sharp.json  action_abc-outlined.json  action_abc-rounded.json  action_abc-sharp.json  action_accessibility-filled.json  action_accessibility-outlined.json  action_accessibility-rounded.json  action_accessibility_new-filled.json  action_accessibility_new-rounded.json  action_accessibility_new-two_tone.json  action_accessible-filled.json  action_accessible-outlined.json  action_accessible-rounded.json  action_accessible-sharp.json  action_accessible-two_tone.json  action_accessible_forward-filled.json  action_accessible_forward-outlined.json  action_accessible_forward-rounded.json  action_accessible_forward-sharp.json  action_account_balance-filled.json  action_account_balance-outlined.json  action_account_balance-rounded.json  action_account_balance-sharp.json  action_account_balance-two_tone.json  action_account_balance_wallet-filled.json  action_account_balance_wallet-outlined.json  action_account_balance_wallet-rounded.json  action_account_balance_wallet-sharp.json  action_account_balance_wallet-two_tone.json  action_account_box-filled.json  action_account_box-outlined.json  action_account_box-rounded.json  action_account_box-sharp.json  action_account_box-two_tone.json  action_account_circle-outlined.json  (+8425 more)
pictogram-icons-material/src/: index.rs  lib.rs
pictogram-icons-oct/: Cargo.toml  README.md
pictogram-icons-simple/: Cargo.toml  LICENSE-MIT  README.md
pictogram-icons-tabler/: Cargo.toml  README.md
pictogram-icons-vscode/: Cargo.toml  README.md
pictogram-icons/src/: lib.rs  main.rs
pictogram-macro/: Cargo.toml  README.md
pictogram-macro/src/: error.rs  lib.rs  svg_icon_input.rs  svg_icon_reader.rs  svg_input.rs  svg_parser.rs
pictogram/src/: lib.rs  svg.rs  view_box.rs
pictogram/tests/: sample.rs
playground/: Cargo.toml
playground/src/: main.rs
