[workspace]
resolver = "3"
members = [
    "pictogram",
    "pictogram-dioxus",
    "pictogram-icons",
    "pictogram-icons-bootstrap",
    "pictogram-icons-feather",
    "pictogram-icons-font-awesome",
    "pictogram-icons-material",
    "pictogram-icons-simple",
    "pictogram-icons-tabler",
    "pictogram-macro",
]
