[package]
name = "picto-macro"
version = "0.1.0"
edition = "2024"
authors = ["Tom Dymel <tom@dymel.dev>"]
readme = "../README.md"
repository = "https://github.com/tdymel/picto"
documentation = "https://docs.rs/picto"
license = "MIT OR Apache-2.0"
description = "Svg resolver macro for picto"
keywords = ["icons", "svg", "dioxus", "leptos"]
categories = ["gui", "web-programming", "accessibility", "wasm"]

[dependencies]
picto-icons-material = { path = "../picto-icons-material", version = "0.1" }

proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[lib]
proc-macro = true
