[package]
name = "pictogram-dioxus"
version = "0.2.0"
edition = "2024"
authors = ["Tom Dymel <tom@dymel.dev>"]
readme = "README.md"
repository = "https://github.com/tdymel/pictogram"
documentation = "https://docs.rs/pictogram"
license = "MIT OR Apache-2.0"
description = "A compile time svg icon resolver. Adapter for dioxus."
keywords = ["icons", "svg", "dioxus"]
categories = ["gui", "web-programming", "accessibility", "wasm"]
exclude = ["tests"]

[dependencies]
pictogram = { path = "../pictogram", version = "0.2.0" }
dioxus = { version = "0.7", default-features = false, features = [
    "html",
    "macro",
    "signals",
] }
