[package]
name = "pictogram-icons-font-awesome"
version = "0.2.5"
edition = "2024"
authors = ["Tom Dymel <tom@dymel.dev>"]
readme = "README.md"
repository = "https://github.com/tdymel/pictogram"
documentation = "https://docs.rs/pictogram"
license = "MIT OR Apache-2.0"
description = "Font Awesome icons export for pictogram"
keywords = ["icons", "svg", "dioxus", "leptos", "font-awesome"]
categories = ["gui", "web-programming", "accessibility", "wasm"]
exclude = ["scraper"]

[dependencies]
pictogram-icons = { path = "../pictogram-icons", version = "0.2.5" }