[package]
name = "pictogram-icons-material"
version = "0.2.0"
edition = "2024"
authors = ["Tom Dymel <tom@dymel.dev>"]
readme = "README.md"
repository = "https://github.com/tdymel/pictogram"
documentation = "https://docs.rs/pictogram"
license = "MIT OR Apache-2.0"
description = "Material design icons export for pictogram"
keywords = ["icons", "svg", "dioxus", "leptos", "material"]
categories = ["gui", "web-programming", "accessibility", "wasm"]
exclude = ["scraper"]

[dependencies]
