[package]
name = "pictogram-icons-oct"
version = "0.3.0"
edition = "2024"
authors = ["Tom Dymel <tom@dymel.dev>"]
readme = "README.md"
repository = "https://github.com/tdymel/pictogram"
documentation = "https://docs.rs/pictogram"
license = "MIT OR Apache-2.0"
description = "Primer Octicons export for pictogram"
keywords = ["icons", "svg", "dioxus", "leptos", "primer-octicons"]
categories = ["gui", "web-programming", "accessibility", "wasm"]
exclude = ["scraper"]

[dependencies]
pictogram-icons = { path = "../pictogram-icons", version = "0.3.0" }
