[package]
name = "pictogram-macro"
version = "0.1.8"
edition = "2024"
authors = ["Tom Dymel <tom@dymel.dev>"]
readme = "../README.md"
repository = "https://github.com/tdymel/pictogram"
documentation = "https://docs.rs/pictogram"
license = "MIT OR Apache-2.0"
description = "Svg resolver macro for picto"
keywords = ["icons", "svg", "dioxus", "leptos"]
categories = ["gui", "web-programming", "accessibility", "wasm"]

[dependencies]
pictogram-icons-material = { path = "../pictogram-icons-material", version = "0.1.8", optional = true, default-features = false }
pictogram-icons-bootstrap = { path = "../pictogram-icons-bootstrap", version = "0.1.8", optional = true, default-features = false }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
proc-macro = true

[features]
default = ["material", "bootstrap"]
material = ["dep:pictogram-icons-material"]
bootstrap = ["dep:pictogram-icons-bootstrap"]
