[package]
name = "pictogram-macro"
version = "0.2.5"
edition = "2024"
authors = ["Tom Dymel <tom@dymel.dev>"]
readme = "README.md"
repository = "https://github.com/tdymel/pictogram"
documentation = "https://docs.rs/pictogram"
license = "MIT OR Apache-2.0"
description = "Svg resolver macro for picto"
keywords = ["icons", "svg", "dioxus", "leptos"]
categories = ["gui", "web-programming", "accessibility", "wasm"]

[dependencies]
pictogram-icons-material = { path = "../pictogram-icons-material", version = "0.2.5", optional = true, default-features = false }
pictogram-icons-bootstrap = { path = "../pictogram-icons-bootstrap", version = "0.2.5", optional = true, default-features = false }
pictogram-icons-feather = { path = "../pictogram-icons-feather", version = "0.2.5", optional = true, default-features = false }
pictogram-icons-font-awesome = { path = "../pictogram-icons-font-awesome", version = "0.2.5", optional = true, default-features = false }
pictogram-icons-tabler = { path = "../pictogram-icons-tabler", version = "0.2.5", optional = true, default-features = false }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
roxmltree = "0.21"

[lib]
proc-macro = true

[features]
default = ["material", "bootstrap", "feather", "font-awesome", "tabler"]
material = ["dep:pictogram-icons-material"]
bootstrap = ["dep:pictogram-icons-bootstrap"]
feather = ["dep:pictogram-icons-feather"]
font-awesome = ["dep:pictogram-icons-font-awesome"]
tabler = ["dep:pictogram-icons-tabler"]
