[package]
name = "pictogram"
version = "0.1.0"
edition = "2024"
authors = ["Tom Dymel <tom@dymel.dev>"]
readme = "../README.md"
repository = "https://github.com/tdymel/pictogram"
documentation = "https://docs.rs/pictogram"
license = "MIT OR Apache-2.0"
description = "A compile time svg icon resolver."
keywords = ["icons", "svg", "dioxus", "leptos"]
categories = ["gui", "web-programming", "accessibility", "wasm"]
exclude = ["tests"]

[dependencies]
pictogram-macro = { path = "../pictogram-macro", version = "0.1.1" }
pictogram-icons-material = { path = "../pictogram-icons-material", version = "0.1.1"}
